--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,11 @@
     <load src="./partials/footer.html" />
     <!-- Buy now (popup) -->
     <load src="./partials/popup.html" />
+    <button id="back-to-top-btn">
+      <svg class="back-to-top-icon" width="40" height="40">
+        <use href="./img/icons.svg#icon-left"></use>
+      </svg>
+    </button>
     <!-- Script -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
